Route teste implemeted
